增加物理模拟1

--- a/bulletnative/src/main/cpp/CMakeLists.txt
+++ b/bulletnative/src/main/cpp/CMakeLists.txt
@@ -21,6 +21,8 @@ add_library( # Sets the name of the library.
         # Provides a relative path to your source file(s).
         MMDPhysics.cpp
         native-lib.cpp
+        BulletDebugDrawer.cpp
+        gl/gl_utils.cpp
         )
 
 # Searches for a specified prebuilt library and stores the path as a
@@ -47,4 +49,6 @@ target_link_libraries( # Specifies the target library.
         BulletDynamics
         BulletCollision
         LinearMath
+        GLESv2
+        EGL
         ${log-lib})
