--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     implementation 'com.android.support:support-annotations:28.0.0'
     implementation 'com.flowpowered:flow-math:1.0.3'
     implementation project(path: ':bulletnative')
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 }
